# LiveCoding

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md
.github/workflows/: build.yaml
CMake/: Readme.md
CMake/CrossCompiling/: CMakeLists.txt  clang-arm.toolchain.cmake  clang.toolchain.cmake
CMake/DependenciesAndTargets/: CMakeLists.txt
CMake/DependenciesAndTargets/child/include/child/: childI.h
CMake/DependenciesAndTargets/grandchild/: grandchild.h
CMake/Variables/: CMakeLists.txt
CrtpAndMixins/: CMakeLists.txt  main.cpp
Lambdas/: 1_lambda_properties.cpp  2_iife.cpp  3_lambda_template.cpp  4_lambda_overload_set.cpp  5_recursive_lambdas.cpp  6_unique_types.cpp  7_constexpr_function_parameters.cpp  CMakeLists.txt  helper.h  main.cpp
StateMachine/: CMakeLists.txt  logger.hpp  main.cpp
TypeErasure/: Readme.md  code.cpp
TypeStatePattern/: Readme.md  code.cpp
src/: benchmark.cpp  challenge.hpp  reference.hpp  tests.cpp
